Thu May 17 15:29:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* security.cc (cygwin_set_impersonation_token): Never destroy
	previous token object.
	(subauth): Create token source with well defined identifier.

Wed May 16 23:27:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* uinfo.cc (uinfo_init): Just set user token to INVALID_HANDLE_VALUE.
	Token value is already invalid at that point.

Wed May 16 21:34:00 2001  Fred Yankowski <fred@ontosys.com>

	* net.cc (errmap): Add missing mapping from WSAEINTR to EINTR.

Wed May 16 09:20:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* sec_helper.cc (legal_sid_type): Fix conditional. Change to
	inline function.

Wed May 16 01:01:48 2001  Christopher Faylor <cgf@cygnus.com>

	* autoload.h: Eliminate.
	* autoload.cc: Pull in autoload.h.  Eliminate many macros.  Rewrite to
	avoid necessity of initialization routines.  Just use a standard one.
	(wsock_init): New function.  Moved from net.cc.
	* net.cc (wsock_init): Move to autoload.cc.
	(wsadata): Make global.
	* dtable.cc (dtable::build_fhandler): Use more reliable method for
	checking if net stuff has been loaded.

Tue May 15 19:52:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fork.cc (fork): Eliminate superfluous call to getuid().
	* security.h: New define `NO_SID'. Remove declarations of functions
	moved to methods into class cygsid.
	(class cygsid): Declare new methods `getfromstr', `get_sid',
	`getfrompw', `getfromgr', `get_rid', `get_uid', `get_gid', `string'
	and new constructors and operators =, == and !=.
	Declare new global cygsids `well_known_XXX_sid' substituting the
	corresponding `get_XXX_sid' functions. Remove declarations of
	these functions.
	* sec_helper.cc (well_known_admin_sid): New global variable.
	(well_known_system_sid): Ditto
	(well_known_creator_owner_sid): Ditto
	(well_known_world_sid): Ditto
	(cygsid::string): New method, substituting `convert_sid_to_string_sid'.
	(cygsid::get_sid): New method, substituting `get_sid'.