@@ -1,3 +1,9 @@
+Fri May 18 10:31:00 2001  Corinna Vinschen <corinna@vinschen.de>
+
+	* net.cc (wsock_event::wait): Explicitely cancel IO when a signal
+	arrived to avoid data loss. Fallback to blocking IO when canceling
+	fails.
+
 Thu May 17 15:29:00 2001  Corinna Vinschen <corinna@vinschen.de>
 
 	* security.cc (cygwin_set_impersonation_token): Never destroy
